js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-do-while-import-defer-empty-str-is-valid-assign-expr.js
do
{
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
while
(
false
)
;
reportCompare
(
0
0
)
;
