js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-else-braceless-import-defer-no-rest-param.js
DONOTEVALUATE
(
)
;
if
(
false
)
{
}
else
import
.
defer
(
.
.
.
[
'
.
/
empty_FIXTURE
.
js
'
]
)
;
